--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" />
 		<link rel="stylesheet" href="./style.css" />
-		<link rel="icon" href="./img/favicon.ico">
+		<link rel="icon" href="./img/favicon.ico" />
 		<title>Pomodoro</title>
 	</head>
 	<body>
@@ -29,26 +29,19 @@
 				<img src="./svg/play.svg" alt="play" class="play" />
 
 				<!-- Outer -->
-				<svg
-					class="track-outline"
-					viewBox="0 0 453 453"
-					fill="none"
-					xmlns="http://www.w3.org/2000/svg"
-				>
+				<svg class="track-outline" viewBox="0 0 453 453" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<circle cx="226.5" cy="226.5" r="216.5" stroke="white" stroke-width="20" />
 				</svg>
 				<!-- Inner -->
-				<svg
-					class="moving-outline"
-					viewBox="0 0 453 453"
-					fill="none"
-					xmlns="http://www.w3.org/2000/svg"
-				>
+				<svg class="moving-outline" viewBox="0 0 453 453" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<circle cx="226.5" cy="226.5" r="216.5" stroke="#03c6fc" stroke-width="20" />
 				</svg>
 				<img src="./svg/replay.svg" class="reset" />
 				<h3 class="time-display">25:00</h3>
 				<h3 class="count-display">count: 0</h3>
+				<div class="slide_container">
+					<input type="range" min="0" max="100" value="60" id="volume" class="volume" />
+				</div>
 			</div>
 
 			<!-- BGM -->
