--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 
 			<!-- BGM -->
 			<div class="sound_picker">
-				<button data-sound="./sounds/rain.mp3" data-background="./img/rain.png" data-color="#03c6fc">
+				<button data-sound="./sounds/rain.mp3" data-background="./img/rain.jpg" data-color="#03c6fc">
 					<img src="./svg/rain.svg" alt="rain" />
 				</button>
-				<button data-sound="./sounds/beach.mp3" data-background="./img/beach.png" data-color="#ffc933">
+				<button data-sound="./sounds/beach.mp3" data-background="./img/beach.jpg" data-color="#ffc933">
 					<img src="./svg/beach.svg" alt="beach" />
 				</button>
-				<button data-sound="./sounds/fire.mp3" data-background="./img/fire.png" data-color="#ff2121">
+				<button data-sound="./sounds/fire.mp3" data-background="./img/fire.jpg" data-color="#ff2121">
 					<img src="./svg/fire.svg" alt="fire" />
 				</button>
 			</div>
